--- a/PW13/MainWindow.xaml
+++ b/PW13/MainWindow.xaml
@@ -623,10 +623,10 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="35"/>
-            <RowDefinition Height="130*"/>
-            <RowDefinition Height="282*"/>
-            <RowDefinition Height="179*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="46*"/>
+            <RowDefinition Height="106*"/>
+            <RowDefinition Height="67*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <StatusBar VerticalAlignment="Bottom" Grid.Row="5" Height="22" HorizontalContentAlignment="Right" Grid.ColumnSpan="2" ToolTip="Показывает координаты выбранной ячейки, а также размер таблицы">
@@ -650,13 +650,14 @@
             <MenuItem x:Name="SupportMenu" Header="Справка" Click="Support_Click" Background="#FFB052FF"/>
             <MenuItem x:Name="AboutProgramMenu" Header="О программе" Click="AboutProgram_Click" Background="#FFB052FF"/>
         </Menu>
-        <ToolBar VerticalAlignment="Top" Height="34" Grid.Row="1" Grid.ColumnSpan="2">
+        <ToolBar VerticalAlignment="Top" Height="40" Grid.Row="1" Grid.ColumnSpan="2">
             <Button x:Name="OpenToolBar" ToolTip="Открыть таблицу (Загрузка из файла)" Click="Open_Click">
                 <Image Source="icons/LoadFrom.ico"/>
             </Button>
             <Button x:Name="SaveToolBar"  ToolTip="Сохранить таблицы в файл" Click="Save_Click">
                 <Image Source="icons/SaveTo.ico"/>
             </Button>
+            <Separator/>
             <Button x:Name="CreateMasToolBar" ToolTip="Создать пустую таблицу" Click="CreateMas_Click">
                 <Image Source="icons/CreateEmptyTable.ico"/>
             </Button>
@@ -664,14 +665,22 @@
                 <Image Source="icons/FillTable.ico"/>
             </Button>
             <Button x:Name="ClearTableToolBar" ToolTip="Очищает таблицу" Click="ClearTable_Click">
-                <Button.Background>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="Black" Offset="1"/>
-                        <GradientStop Color="White"/>
-                    </LinearGradientBrush>
-                </Button.Background>
                 <Image Source="icons/Clear.ico"/>
             </Button>
+            <Separator/>
+            <Button x:Name="AddColumn" ToolTip="Добавляет столбец" Click="AddColumn_Click">
+                <Image Source="icons/AddColumn.ico"/>
+            </Button>
+            <Button x:Name="DeleteColumn" ToolTip="Удаляет столбец" Click="DeleteColumn_Click">
+                <Image Source="icons/DelColumn.ico"/>
+            </Button>
+            <Button x:Name="AddRow" ToolTip="Добавляет строку" Click="AddRow_Click">
+                <Image Source="icons/AddRow.ico"/>
+            </Button>
+            <Button x:Name="DeleteRow" ToolTip="Удаляет строку" Click="DeleteRow_Click">
+                <Image Source="icons/DelRow.ico"/>
+            </Button>
+            <Separator/>
             <Button ToolTip="Показывает справку для отображения особенностей программы" Click="Support_Click">
                 <Image Source="icons/Support.ico"/>
             </Button>
@@ -682,7 +691,7 @@
                 <Image Source="icons/Exit.ico"/>
             </Button>
         </ToolBar>
-        <GroupBox Header="Таблица" HorizontalAlignment="Left" Height="86" Margin="49,0,0,10" VerticalAlignment="Bottom" Width="188" Grid.Row="4" Grid.Column="1">
+        <GroupBox Header="Очистка и вычисление" HorizontalAlignment="Right" Height="86" Margin="0,0,285,10" VerticalAlignment="Bottom" Width="188" Grid.Row="4" Grid.Column="1">
             <Grid>
                 <Button x:Name="ClearTable" Content="Очистить таблицу" Margin="10,10,10,0" VerticalAlignment="Top" Click="ClearTable_Click"/>
                 <Button x:Name="Find" Content="Вычислить"  Margin="10,35,10,0" VerticalAlignment="Top" Click="Find_Click" ToolTip="Производит нахождение среднего арифметического для каждого столбца, а также количества элементов, больших его"/>
