--- a/PW13/MainWindow.xaml
+++ b/PW13/MainWindow.xaml
@@ -734,11 +734,10 @@
         <Grid Grid.Row="3" Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <GridSplitter Width="3" Background="Black" Grid.Column="0" Panel.ZIndex="1"/>
             <GridSplitter Width="3" Background="Black" Grid.Column="3" Panel.ZIndex="1" HorizontalAlignment="Left"/>
             <GroupBox Header="Создание скелета таблицы" HorizontalAlignment="Left" VerticalAlignment="Bottom">
                 <DockPanel LastChildFill="True">
